cluster/apps/security/authentik/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: security
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`authentik.${SECRET_DOMAIN}`)
      kind: Rule
    # middlewares:
      # - name: internal-ipwhitelist
        # namespace: traefik
      services:
        - name: authentik
          port: 80
  tls:
    secretName: ${SECRET_CERT}
